--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ a{
 }
 header {
     display: flex;
+    position:sticky;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
