--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ a{
 }
 header {
     display: flex;
-    position:sticky;
+    position:fixed;
     flex-direction: row;
     justify-content: space-around;
     top:0;
