--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ a{
 }
 header {
     display: flex;
+    z-index:-9999;
     position:fixed;
     flex-direction: row;
     justify-content: space-around;
